[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Pause.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ButtonAssets/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/Theme64.tres" type="Theme" id=3]

[node name="Death" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 601.0
color = Color( 0.380392, 0, 0, 0.368627 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 1.0
margin_top = -3.0
margin_right = 1024.0
margin_bottom = 598.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_left = 411.0
margin_top = 100.0
margin_right = 611.0
margin_bottom = 500.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 163.0
theme = ExtResource( 3 )
text = "
You Died"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2"]
margin_top = 167.0
margin_right = 200.0
margin_bottom = 400.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
margin_right = 200.0
margin_bottom = 233.0

[node name="RetryButton" parent="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]

[node name="Label" parent="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RetryButton" index="0"]
text = "Retry"

[node name="TitleScreenButton" parent="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 79.0
margin_bottom = 154.0

[node name="Label" parent="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TitleScreenButton" index="0"]
text = "Title Screen"

[node name="QuitButton" parent="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 158.0
margin_bottom = 233.0

[node name="Label" parent="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/QuitButton" index="0"]
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RetryButton"]
[editable path="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TitleScreenButton"]
[editable path="CenterContainer/VBoxContainer2/HBoxContainer/VBoxContainer/QuitButton"]
